SW-2516 Replace faulty links with working ones

--- a/octoprint_mrbeam/templates/settings/maintenance_settings.jinja2
+++ b/octoprint_mrbeam/templates/settings/maintenance_settings.jinja2
@@ -14,7 +14,7 @@
                         {{ _('The pre filter filters all coarse particles from the exhaust air. Regular changing improves the air flow and preserves the main filter.*') }}
                     </small>
                     <div class="maintenance-links">
-                        <a href="https://store.mr-beam.org/products/10er-pack-vorfilter-fur-mr-beam-air-filter-system?utm_source=beamos&utm_medium=beamos&utm_campaign=maintenance_page"
+                        <a href="{{ _('https://www.mr-beam.org/en') + '/products/vorfilter-mrbeam?utm_source=beamos&utm_medium=beamos&utm_campaign=maintenance_page'}}"
                            target="_blank" id="prefilter_shop_link" class="maintenance-link-shop">
                             <i class="icon-shopping-cart"></i>
                             {{ _('Buy now') }}
@@ -41,7 +41,7 @@
                         {{ _('The main filter is a combined hepa and activated carbon filter. It filters both tiny particles and odours from the exhaust air.*') }}
                     </small>
                     <div class="maintenance-links">
-                        <a href="https://store.mr-beam.org/products/activated-carbon-filter-for-the-mr-beam-air-filter-system-incl-5-prefilter?utm_source=beamos&utm_medium=beamos&utm_campaign=maintenance_page"
+                        <a href="{{ _('https://www.mr-beam.org/en') + '/products/aktivkohlefilter-inklusive-zehn-vorfilter?utm_source=beamos&utm_medium=beamos&utm_campaign=maintenance_page'}}"
                            target="_blank" id="carbon_filter_shop_link" class="maintenance-link-shop">
                             <i class="icon-shopping-cart"></i>
                             {{ _('Buy now') }}
@@ -69,7 +69,7 @@
                         {{ _('Clean the laser head regularly to maintain its full performance. You can either do it yourself or you can send it to us and we clean it for you!') }}
                     </small>
                     <div class="maintenance-links">
-                        <a href="https://store.mr-beam.org/products/laser-head-maintenance-service?utm_source=beamos&utm_medium=beamos&utm_campaign=maintenance_page"
+                        <a href="{{ _('https://www.mr-beam.org/en') + '/products/laserkopf-reinigung?utm_campaign=maintenance_page&utm_medium=beamos&utm_source=beamos'}}"
                            target="_blank" id="laser_head_shop_link" class="maintenance-link-shop">
                             <i class="icon-shopping-cart"></i>
                             {{ _('Buy now') }}
