--- a/octoprint_mrbeam/templates/settings/about_settings.jinja2
+++ b/octoprint_mrbeam/templates/settings/about_settings.jinja2
@@ -79,7 +79,7 @@
 
                     <div><strong>{{ _('Online Support Portal') }}:</strong> <a href="https://www.mr-beam.org/support" target="_blank">mr-beam.org/support</a></div>
                     <div><strong>{{ _('Privacy Policies') }}:</strong>
-                        <a href="http://shop.mr-beam.org/privacy" target="_blank">{{ _('Mr Beam Web Site') }}</a> |
+                        <a href="{{ _('https://www.mr-beam.org/en') + '/policies/privacy-policy'}}" target="_blank">{{ _('Mr Beam Web Site') }}</a> |
                         <a href="/plugin/findmymrbeam/static/docs/findmrbeamorg_privacy_policy.pdf" target="_blank">{{ _('find.mr-beam service') }}</a> |
                         <a href="{{ _('/plugin/mrbeam/static/docs/MrBeamAnalytics-PrivacyPolicy_en.pdf') }}" target="_blank">{{ _('Mr Beam Analytics') }}</a>
                     </div>
