--- a/octoprint_mrbeam/templates/settings/about_settings.jinja2
+++ b/octoprint_mrbeam/templates/settings/about_settings.jinja2
@@ -79,7 +79,7 @@
 
                     <div><strong>{{ _('Online Support Portal') }}:</strong> <a href="https://www.mr-beam.org/support" target="_blank">mr-beam.org/support</a></div>
                     <div><strong>{{ _('Privacy Policies') }}:</strong>
-                        <a href="http://shop.mr-beam.org/privacy" target="_blank">{{ _('Mr Beam Web Site') }}</a> |
+                        <a href="{{ _('https://www.mr-beam.org/en') + '/policies/privacy-policy'}}" target="_blank">{{ _('Mr Beam Web Site') }}</a> |
                         <a href="/plugin/findmymrbeam/static/docs/findmrbeamorg_privacy_policy.pdf" target="_blank">{{ _('find.mr-beam service') }}</a> |
                         <a href="{{ _('/plugin/mrbeam/static/docs/MrBeamAnalytics-PrivacyPolicy_en.pdf') }}" target="_blank">{{ _('Mr Beam Analytics') }}</a>
                     </div>
@@ -106,7 +106,6 @@
                     <div><strong>{{ _('find.mr-beam service') }}:</strong> <a href="http://find.mr-beam.org" target="_blank"> find.mr-beam.org</a></div>
                     <div><strong>{{ _('Online resources') }}:</strong> <a href="{{ mrbeamorg_downloads }}" target="_blank"> {{ _('Mr Beam Downloads') }}</a></div>
                     <div><strong>{{ _('Source code') }}:</strong> <a href="https://github.com/mrbeam" target="_blank"> github.com/mrbeam</a></div>
-                    <div><strong>{{ _('Recommend Mr Beam') }}</strong> {{ _("and earn cashback") }}: <a href="https://www.aklamio.com/community/shops/mrbeam_de" target="_blank">aklamio.com</a></div>
                 </ul>
             </div>
         </div>
