--- a/octoprint_mrbeam/static/css/mrbeam.css
+++ b/octoprint_mrbeam/static/css/mrbeam.css
@@ -462,6 +462,10 @@ input[type="submit"].btn.btn-mini {
   text-decoration: none;
 }
 
+.btn-left {
+  float: left;
+}
+
 .clearfix {
   *zoom: 1;
 }
