--- a/octoprint_mrbeam/templates/laserhead_changed.jinja2
+++ b/octoprint_mrbeam/templates/laserhead_changed.jinja2
@@ -1,6 +1,6 @@
 <div id="laserhead_changed" class="modal hide fade" data-backdrop="static">
     <div class="modal-header">
-        <h3>{{ _("A new Laserhead has been detected!.") }}</h3>
+        <h3>{{ _("A new Laserhead has been detected!") }}</h3>
     </div>
     {# Not supported laserhead  - START #}
     <div class="modal-body" data-bind="visible: !laserhead_model_supported">
@@ -22,7 +22,7 @@
             <p> {{ _("This means that we also update the default material settings to the new laserhead as long it is installed to provide you the best possible support. However, we do not update your custom materials, this will need your personal testing and finetuning.") }}</p>
             <p> {{ _("Read about the changes you can expect with the MrBeam II dreamcut [S] Laserhead.") }} <a
                     target="_blank"
-                    href="{{ _("https://support.mr-beam.org/en/support/solutions/articles/43000640531") }}">
+                    href="{{ _("https://support.mr-beam.org/en") }}/support/solutions/articles/43000640531">
                 » {{ _("Read more") }} </a></p>
         </div>
     </div>
@@ -37,17 +37,17 @@
             <p> {{ _("This means that we also update the default material settings to the new laserhead as long it is installed to provide you the best possible support. However, we do not update your custom materials, this will need your personal testing and finetuning.") }}</p>
             <p> {{ _("Read about what changes vou can expect with a Laserhead Mr Beam Il dreamcut [x].") }} <a
                     target="_blank"
-                    href="{{ _("https://support.mr-beam.org/en/support/solutions/articles/#TODO") }}">
-                » {{ _("Read more") }} </a></p>{#            TODO#}
+                    href="{{ _("https://support.mr-beam.org/en") }}/support/solutions/articles/43000693865">
+                » {{ _("Read more") }} </a></p>
         </div>
     </div>
 
     <div class="modal-body" data-bind="visible:laserhead_changed_step2_laserhead_x_show">
         <div>
-            <p><img loading="lazy" src="https://picsum.photos/200/300"></p>{# TODO #}
+            <p><img loading="lazy" src="https://picsum.photos/601/300"></p>{# TODO #}
             <h4> {{ _("Please make sure the correct power supply is connected!") }}</h4>
             {% set link_for_for_support_page = _('https://support.mr-beam.org/en') %}
-            <p> {{ (_("You need a 90 Power Supply tor the new Laserhead because or Its increased energy requirements. Check If vou have that, otherwise look %(open)shere%(close)s." , open='<a href="%s/support/solutions/articles/43000640531" target="_blank">' % link_for_for_support_page, close='</a>')|safe) }}</p>{#            TODO fix link#}
+            <p> {{ (_("You need a 90 Power Supply tor the new Laserhead because or Its increased energy requirements. Check If vou have that, otherwise look %(open)shere%(close)s." , open='<a href="%s/support/solutions/articles/43000693872" target="_blank">' % link_for_for_support_page, close='</a>')|safe) }}</p>{#            TODO fix link#}
 
         </div>
     </div>
@@ -64,7 +64,7 @@
 
     <div class="modal-footer">
         <button class="btn btn-default btn-left" id="laserhead_change_next_step"
-                data-bind="click: $root.laserhead_changed_previous_step, visible: laserhead_changed_show_previous_button()">{{ _("Previous") }}</button>
+                data-bind="click: $root.laserhead_changed_previous_step, visible: laserhead_changed_show_previous_button()">{{ _("Back") }}</button>
         <button class="btn btn-primary" id="laserhead_change_next_step"
                 data-bind="click: $root.laserhead_changed_next_step, visible: !lastStep()">{{ _("Next") }}</button>
         <button class="btn btn-primary" id="laserhead_changed_detected" data-dismiss="modal" aria-hidden="true"
