fix guided tour not working changed guided tour design improve focus step added guided tour as extra nav item

--- a/octoprint_mrbeam/templates/conversion_dialog.jinja2
+++ b/octoprint_mrbeam/templates/conversion_dialog.jinja2
@@ -723,7 +723,7 @@
                                    data-bind="checked: dontRemindMeAgainChecked"/> {{ _('Don\'t remind me again') }}
                         </label>
                     </div>
-                    <a href="#" class="btn" aria-hidden="true" data-dismiss="modal"
+                    <a href="#" class="btn" aria-hidden="true" data-dismiss="modal" id="start_job_btn_forgot_focus"
                        data-bind="click: function() {}">{{ _('I forgot') }}</a>
                     <a href="#" style="display: none;" class="btn" aria-hidden="true"
                        data-bind="click: move_laser_over_material">{{ _('Move over the material') }}</a>
