--- a/octoprint_mrbeam/templates/mrbeam_ui_index.jinja2
+++ b/octoprint_mrbeam/templates/mrbeam_ui_index.jinja2
@@ -106,6 +106,8 @@
                             {% endfor %}
 							<li class="divider"></li>
 							<li><a href="#" onclick="$('#support_overlay').modal('show')" id="support_menu_item" data-test="mrbeam-ui-index-tab-support"><i class="fa fa-life-ring"></i> {{ _('Support') }}</a></li>
+                            <li class="divider"></li>
+                            <li><a href="#" onclick="window.mrbeam.viewModels.wizardWhatsnewViewModel.startGuidedTour()" id="guided_tour_menu_item"><i class="fa fa-binoculars"></i> {{ _('Guided tour') }}</a></li>
 							<li class="divider show_only_online"></li>
 							<li class="show_only_online"><a href="https://find.mr-beam.org" target="_blank" data-test="mrbeam-ui-index-tab-laser-find-mr-beam"><i class="icon-chevron-right"></i> {{ _('Find my Mr Beam') }}</a></li>
                         </ul>
