SW-3004 Safecutter request * Add modal window for safecutter. * Add placeholder images for hazardous materials. * Add handler for safecutter dataset. * Add to js,jinja to the ui inits

--- a/octoprint_mrbeam/templates/mrbeam_ui_index.jinja2
+++ b/octoprint_mrbeam/templates/mrbeam_ui_index.jinja2
@@ -28,6 +28,7 @@
         {% include 'mrbeam_initscript.jinja2' %}
         {% include 'lasersafety_standalone.jinja2' %}
         {% include 'support_standalone.jinja2' %}
+        {% include 'modals/safecutter.jinja2' %}
         {% include 'ready_to_laser.jinja2' %}
         {% include 'review.jinja2' %}
         {% include 'laser_job_done.jinja2' %}
