--- a/octoprint_mrbeam/templates/ready_to_laser.jinja2
+++ b/octoprint_mrbeam/templates/ready_to_laser.jinja2
@@ -9,7 +9,7 @@
         <div class="modal-body">
             <img loading="lazy" data-bind='visible: !is_fan_connected()' src="/plugin/mrbeam/static/img/airfilter.jpg">
             <img loading="lazy" data-bind='visible: !state.interlocksClosed() && is_fan_connected()' src="/plugin/mrbeam/static/img/closelid.jpg">
-            <img loading="lazy" data-bind='visible: state.interlocksClosed() && is_fan_connected()' src="/plugin/mrbeam/static/img/onebutton.jpg">
+            <img loading="lazy" data-bind='visible: state.interlocksClosed() && is_fan_connected() && !state.safecutterError()' src="/plugin/mrbeam/static/img/onebutton.jpg">
             <h5 data-bind='visible: !is_fan_connected()'>{{ _('Can not detect air filter system. Is it plugged in?') }}</h5>
             <h5 data-bind='visible: !state.interlocksClosed() && is_fan_connected()'>{{ _('Please close the lid completely before we can proceed.') }}</h5>
             <h5 data-bind='visible: state.interlocksClosed() && is_fan_connected()'>{{ _('Everything is ready to go.') }}</h5>
