--- a/octoprint_mrbeam/templates/laserhead_changed.jinja2
+++ b/octoprint_mrbeam/templates/laserhead_changed.jinja2
@@ -1,26 +1,26 @@
 <div id="laserhead_changed" class="modal hide fade" data-backdrop="static">
     <div class="modal-header">
-        <h3>{{ _("A new Laserhead has been detected!") }}</h3>
+        <h3>{{ _("A new laser head has been detected!") }}</h3>
     </div>
     {# Not supported laserhead  - START #}
     <div class="modal-body" data-bind="visible: !laserhead_model_supported">
         <div>
-            <img loading="lazy" src="/plugin/mrbeam/static/img/welcome_dialog/start.png">
-            <h4> {{ _("We are verv sorrv but the lust installed Laserhead will not work with vour device.") }}</h4>
-            <p> {{ _("Ever device older than the dreamcut row will not support the new and advanced Laserhead properlv. There are just toc many improvements that are missing in the earlier states of our model rows like Mr Beam and Mr Beam Il. Please contaci our support tor the Turther steps") }}</p>
+            <img loading="lazy" src="/plugin/mrbeam/static/img/Welcome.png">
+            <h4> {{ _("We are verv sorry but the installed Laser head will not work with vour device.") }}</h4>
+            <p> {{ _("Every device older than the dreamcut row will not support the new and advanced Laser head properly. There are just too many improvements that are missing in the earlier states of our model rows like Mr Beam and Mr Beam II. Please contact our support tor further steps.") }}</p>
         </div>
     </div>
     {# Not supported laserhead  - END #}
 
 
     {# Steps for laserhead S  - START #}
-    <div class="modal-body" data-bind="visible:laserhead_changed_step1_laserhead_s_show">
+    <div class="modal-body" data-bind="visible: show_step_for_laserhead_s(1)">
         <div>
-            <img loading="lazy" src="/plugin/mrbeam/static/img/welcome_dialog/start.png">
-            <h4> {{ _("Your Mr Beam dreamcut [S] Laserhead has been successfully installed.") }}</h4>
-            <p> {{ _("With this Laserhead you can work now even faster.") }}</p>
-            <p> {{ _("This means that we also update the default material settings to the new laserhead as long it is installed to provide you the best possible support. However, we do not update your custom materials, this will need your personal testing and finetuning.") }}</p>
-            <p> {{ _("Read about the changes you can expect with the MrBeam II dreamcut [S] Laserhead.") }} <a
+            <img loading="lazy" src="/plugin/mrbeam/static/img/Welcome.png">
+            <h4> {{ _("Your Mr Beam dreamcut [S] Laser head has been successfully installed.") }}</h4>
+            <p> {{ _("With this Laser head you can work now even faster.") }}</p>
+            <p> {{ _("This means that we also update the default material settings to the new laser head as long it is installed to provide you the best possible support. However, we do not update your custom materials, this will need your personal testing and finetuning.") }}</p>
+            <p> {{ _("Read about the changes you can expect with the MrBeam II dreamcut [S] Laser head.") }} <a
                     target="_blank"
                     href="{{ _("https://support.mr-beam.org/en") }}/support/solutions/articles/43000640531">
                 » {{ _("Read more") }} </a></p>
@@ -29,35 +29,47 @@
     {# Steps for laserhead S  - END #}
 
     {# Steps for laserhead x  - START #}
-    <div class="modal-body" data-bind="visible:laserhead_changed_step1_laserhead_x_show">
+    <div class="modal-body" data-bind="visible: show_step_for_laserhead_x(1)">
         <div>
-            <img loading="lazy" src="/plugin/mrbeam/static/img/welcome_dialog/start.png">
-            <h4> {{ _("Your Mr Beam dreamcut [x] Laserhead has been successfully installed.") }}</h4>
-            <p> {{ _(" With this Laserhead you can work now even faster.") }}</p>
-            <p> {{ _("This means that we also update the default material settings to the new laserhead as long it is installed to provide you the best possible support. However, we do not update your custom materials, this will need your personal testing and finetuning.") }}</p>
-            <p> {{ _("Read about what changes vou can expect with a Laserhead Mr Beam Il dreamcut [x].") }} <a
+            <img loading="lazy" src="/plugin/mrbeam/static/img/Welcome.png">
+            <h4> {{ _("Your Mr Beam II dreamcut [X] laser head has been successfully connected.") }}</h4>
+            <p> {{ _(" You can now work even faster with this laser head.") }}</p>
+            <p> {{ _("We have adapted the standard material settings to the new laser head so that you can start directly. Your personal material settings remain unchanged. To adjust them to the increased performance of the laser head, you must perform tests yourself and save the results.") }}</p>
+            <p> {{ _("All the new features that await you with the dreamcut [X] laser head can be found in this Knowledgebase article:") }} <a
                     target="_blank"
                     href="{{ _("https://support.mr-beam.org/en") }}/support/solutions/articles/43000693865">
-                » {{ _("Read more") }} </a></p>
+                » {{ _("Learn more") }} </a></p>
         </div>
     </div>
 
-    <div class="modal-body" data-bind="visible:laserhead_changed_step2_laserhead_x_show">
+    <div class="modal-body" data-bind="visible: show_step_for_laserhead_x(2)">
         <div>
-            <p><img loading="lazy" src="https://picsum.photos/601/300"></p>{# TODO #}
-            <h4> {{ _("Please make sure the correct power supply is connected!") }}</h4>
+            <p><img loading="lazy" src="/plugin/mrbeam/static/img/speed_improvement.png"></p>
+            <h4> {{ _("Your Mr Beam is even faster now!") }}</h4>
+            <ul>
+                <li> {{ _("If you had a Mr Beam II dreamcut before, you can now cut up to four times as fast.") }}</li>
+                <li> {{ _("If you had a Mr Beam II dreamcut [S] before, you can now cut up to twice as fast.") }}</li>
+            </ul>
+            <p> {{ _("<b>Please keep in mind:</b> The faster you laser, the more particles are released. This means that your filters will wear out faster. So check regularly if you need to change the filters.") }}</p>
+        </div>
+    </div>
+
+    <div class="modal-body" data-bind="visible: show_step_for_laserhead_x(3)">
+        <div>
+            <p><img loading="lazy" src="/plugin/mrbeam/static/img/Powersupply.png"></p>
+            <h4> {{ _("The new laser head needs a larger power supply!") }}</h4>
             {% set link_for_for_support_page = _('https://support.mr-beam.org/en') %}
-            <p> {{ (_("You need a 90 Power Supply tor the new Laserhead because or Its increased energy requirements. Check If vou have that, otherwise look %(open)shere%(close)s." , open='<a href="%s/support/solutions/articles/43000693872" target="_blank">' % link_for_for_support_page, close='</a>')|safe) }}</p>{#            TODO fix link#}
+            <p> {{ (_("Due to its slightly increased power requirements, you will need a 90W power supply for the laser head. If you are not sure which power supply you are currently using, you can learn more about it in this knowledge base article: %(open)sLearn more%(close)s." , open='<a href="%s/support/solutions/articles/43000693872" target="_blank">' % link_for_for_support_page, close='</a>')|safe) }}</p>
 
         </div>
     </div>
 
 
-    <div class="modal-body" data-bind="visible:laserhead_changed_step3_laserhead_x_show">
+    <div class="modal-body" data-bind="visible: show_step_for_laserhead_x(4)">
         <div>
-            <p><img loading="lazy" src="https://picsum.photos/600/300"></p>{# TODO #}
-            <h4> {{ _("Please place the included sticker onto our Device!") }}</h4>
-            <p> {{ _('To keep the device in compliance with safety instructions and regulations. please place the supplied updated laser power label over the previous „5W” notice.') }}</p>
+            <p><img loading="lazy" src="/plugin/mrbeam/static/img/10W_sticker.png"></p>
+            <h4> {{ _("Please place the included sticker on your Mr Beam!") }}</h4>
+            <p> {{ _('Please cover the 5W safety label on the back of your Mr Beam with the new 10W label.') }}</p>
         </div>
     </div>
     {# Steps for laserhead x  - END #}
@@ -66,7 +78,7 @@
         <button class="btn btn-default btn-left" id="laserhead_change_next_step"
                 data-bind="click: $root.laserhead_changed_previous_step, visible: laserhead_changed_show_previous_button()">{{ _("Back") }}</button>
         <button class="btn btn-primary" id="laserhead_change_next_step"
-                data-bind="click: $root.shutdownDevice, visible: laserhead_changed_step2_laserhead_x_show">{{ _("I forgot, shutdown to change") }}</button>
+                data-bind="click: $root.shutdownDevice, visible: show_step_for_laserhead_x(3)">{{ _("I forgot, shut down to change") }}</button>
         <button class="btn btn-primary" id="laserhead_change_next_step"
                 data-bind="click: $root.laserhead_changed_next_step, visible: !lastStep()">{{ _("Next") }}</button>
         <button class="btn btn-primary" id="laserhead_changed_detected" data-dismiss="modal" aria-hidden="true"
