added PR feedback

--- a/octoprint_mrbeam/templates/laserhead_changed.jinja2
+++ b/octoprint_mrbeam/templates/laserhead_changed.jinja2
@@ -6,8 +6,8 @@
     <div class="modal-body" data-bind="visible: !laserhead_model_supported">
         <div>
             <img loading="lazy" src="/plugin/mrbeam/static/img/Welcome.png">
-            <h4> {{ _("We are verv sorry but the installed Laser head will not work with vour device.") }}</h4>
-            <p> {{ _("Every device older than the dreamcut row will not support the new and advanced Laser head properly. There are just too many improvements that are missing in the earlier states of our model rows like Mr Beam and Mr Beam II. Please contact our support tor further steps.") }}</p>
+            <h4> {{ _("We are very sorry but the installed laser head will not work with your device.") }}</h4>
+            <p> {{ _("Every device older than the dreamcut row will not support the new and advanced laser head properly. There are just too many improvements that are missing in the earlier states of our model rows like Mr Beam and Mr Beam II. Please contact our support tor further steps.") }}</p>
         </div>
     </div>
     {# Not supported laserhead  - END #}
@@ -17,10 +17,10 @@
     <div class="modal-body" data-bind="visible: show_step_for_laserhead_s(1)">
         <div>
             <img loading="lazy" src="/plugin/mrbeam/static/img/Welcome.png">
-            <h4> {{ _("Your Mr Beam dreamcut [S] Laser head has been successfully installed.") }}</h4>
-            <p> {{ _("With this Laser head you can work now even faster.") }}</p>
-            <p> {{ _("This means that we also update the default material settings to the new laser head as long it is installed to provide you the best possible support. However, we do not update your custom materials, this will need your personal testing and finetuning.") }}</p>
-            <p> {{ _("Read about the changes you can expect with the MrBeam II dreamcut [S] Laser head.") }} <a
+            <h4> {{ _("Your Mr Beam dreamcut [S] laser head has been successfully installed.") }}</h4>
+            <p> {{ _("With this laser head you can work now even faster.") }}</p>
+            <p> {{ _("This means that we also update the default material settings to the new laser head as long it is installed to provide you the best possible support. However, we do not update your custom materials, this will need your personal testing and fine tuning.") }}</p>
+            <p> {{ _("Read about the changes you can expect with the MrBeam II dreamcut [S] laser head.") }} <a
                     target="_blank"
                     href="{{ _("https://support.mr-beam.org/en") }}/support/solutions/articles/43000640531">
                 » {{ _("Read more") }} </a></p>
