--- a/octoprint_mrbeam/templates/laser_job_done.jinja2
+++ b/octoprint_mrbeam/templates/laser_job_done.jinja2
@@ -43,10 +43,13 @@
                                 <div class="modal__material-description">
                                     <div data-bind="if: window.mrbeam.viewModels.vectorConversionViewModel.selected_material_thickness().thicknessMM !== -1">
                                         <p data-bind="text: window.mrbeam.viewModels.vectorConversionViewModel.selected_material().name + ', ' +
-                                        window.mrbeam.viewModels.vectorConversionViewModel.selected_material_thickness().thicknessMM + gettext(' mm')"></p>
+                                        window.mrbeam.viewModels.vectorConversionViewModel.selected_material_thickness().thicknessMM + gettext(' mm'),
+                                        attr: { title: window.mrbeam.viewModels.vectorConversionViewModel.selected_material().name + ', ' +
+                                        window.mrbeam.viewModels.vectorConversionViewModel.selected_material_thickness().thicknessMM + gettext(' mm') }"></p>
                                     </div>
                                     <div data-bind="if: window.mrbeam.viewModels.vectorConversionViewModel.selected_material_thickness().thicknessMM === -1">
-                                        <p data-bind="text: window.mrbeam.viewModels.vectorConversionViewModel.selected_material().name"></p>
+                                        <p data-bind="text: window.mrbeam.viewModels.vectorConversionViewModel.selected_material().name,
+                                        attr: { title: window.mrbeam.viewModels.vectorConversionViewModel.selected_material().name }"></p>
                                     </div>
                                 </div>
                             </div>
