--- a/octoprint_mrbeam/templates/laser_job_done.jinja2
+++ b/octoprint_mrbeam/templates/laser_job_done.jinja2
@@ -6,8 +6,8 @@
         </div>
         <div class="modal-body">
             <div class="modal__modal-body--social-media-section">
-                <p>{{ _('Share your work and inspire others!') }}</p>
-                <p class="modal__p--hashtag"><a href="https://www.instagram.com/explore/tags/madewithmrbeam/" target="_blank">#madewithmrbeam</a>
+                <p>{{ _('Show your creation and use our hashtag') }}</p>
+                <p class="modal__p--hashtag"><a href="https://mr-beam.org/madewithmrbeam" target="_blank">#madewithmrbeam</a>
                 </p>
                 <div>
                     <a href="https://www.instagram.com/mrbeamlasers/" target="_blank"><i class="icon-instagram"></i></a>
