--- a/octoprint_mrbeam/templates/laser_job_done.jinja2
+++ b/octoprint_mrbeam/templates/laser_job_done.jinja2
@@ -7,7 +7,7 @@
         <div class="modal-body">
             <div class="modal__modal-body--social-media-section">
                 <p>{{ _('Show your creation and use our hashtag') }}</p>
-                <p class="modal__p--hashtag"><a href="https://mr-beam.org/madewithmrbeam" target="_blank">#madewithmrbeam</a>
+                <p class="modal__p--hashtag"><a href="https://mr-beam.org/madewithmrbeam?utm_source=beamos&utm_medium=software" target="_blank">#madewithmrbeam</a>
                 </p>
                 <div>
                     <a href="https://www.instagram.com/mrbeamlasers/" target="_blank"><i class="icon-instagram"></i></a>
